# GIZ_GhanaAI_Training_Materials

./: .gitignore  CLAUDE.md  EnvSetup.html  EnvSetup.qmd  Git_Github.html  Git_Github.qmd  README.md  default_reference.pptx  intro_DL1.html  intro_DL1.qmd  intro_DL2.html  intro_DL3.html  intro_DL3.qmd  intro_DL3.quarto_ipynb  intro_ML1.html  intro_ML1.qmd  intro_ML1.qmd.backup  intro_ML2.html  intro_ML2.ipynb  intro_ML2.qmd  intro_ML3.html  intro_ML3.qmd  intro_pandas1.html  intro_pandas1.ipynb  intro_pandas1.qmd  intro_pandas2.html  intro_pandas2.ipynb  intro_python1.html  intro_python1.ipynb  intro_python1.qmd  intro_python2.html  intro_python2.ipynb  intro_python2.qmd  intro_python3.html  intro_python3.ipynb  intro_python3.qmd  main.py  pyproject.toml  session-ses_3f2d.md  setup_gtsrb.py  (+4 more)
00-welcome/: _quarto.yml  curriculum_strategy.qmd  delivery_schedule.qmd  milestone_rubrics.qmd  python-vs-other-languages.qmd  trainer_guide.qmd
01-setup/: setting_up.html  setting_up.qmd
02-version-control/: Git_Github.html  Git_Github.qmd
03-python-basics/: exercises_python.qmd  intro_python1.html  intro_python1.ipynb  intro_python1.qmd  intro_python2.html  intro_python2.ipynb  intro_python2.qmd  intro_python3.html  intro_python3.ipynb  intro_python3.qmd  intro_python3.qmd.backup  python_basics_presentation.pptx  python_basics_presentation.qmd  python_basics_presentation.quarto_ipynb_1  python_basics_presentation.quarto_ipynb_10  python_basics_presentation.quarto_ipynb_11  python_basics_presentation.quarto_ipynb_12  python_basics_presentation.quarto_ipynb_13  (+17 more)
(+81 files in other folders)
