[project]
name = "trainingmaterials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lab>=8.6",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "xgboost>=3.1.3",
]
