[project]
name = "trainingmaterials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "icrawler>=0.6.10",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaggle>=1.8.3",
    "kagglehub>=0.4.2",
    "lab>=8.6",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "pypdf>=6.9.0",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "xgboost>=3.1.3",
]
